--- a/client/src/app/components/footer/footer.css
+++ b/client/src/app/components/footer/footer.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
   position: fixed;
   left: 0;
   bottom: 0;
@@ -6,4 +6,4 @@
   background-color: red;
   color: white;
   text-align: center;
-}
+} */
