--- a/client/src/app/components/content-logged/content-logged.css
+++ b/client/src/app/components/content-logged/content-logged.css
@@ -1,4 +1,36 @@
 .content-logged-box{
-  position: relative;
-  background-color: green;
+  position: absolute;
+  background-color: darkgoldenrod;
+  width: 100%;
+  height: 200px;
+
+  top: 50%;
+  transform: translateY(-50%);
+
+  display: flex;
+}
+
+.bt{
+  flex-grow: 1;
+  flex-basis: 0;
+}
+.bt {
+  display: inline-block;
+  border: none;
+  padding: 8px 10px;
+  margin: 10px;
+  text-decoration: none;
+  background: black;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: .8em;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, 
+              transform 150ms ease;
+  appearance: none;
+}
+.bt:hover {
+  background: yellowgreen;
+  color: navy;
 }
