--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,3 +17,50 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+input[type=submit] {
+  display: inline-block;
+  border: none;
+  padding: 8px 10px;
+  margin-top: 4px;
+  text-decoration: none;
+  background: black;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: .8em;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, 
+              transform 150ms ease;
+  appearance: none;
+}
+input[type=text], input[type=password] {
+  -webkit-appearance: none;
+  background-color: red;
+  padding: 8px 5px;
+  margin: 2px 0;
+  box-sizing: border-box;
+  border:.1px solid rgba(0, 0, 0, .1);
+  font-size: 1em;
+}
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
+input[type=submit]:hover,
+input[type=submit]:focus {
+  background: white;
+  color: black;
+}
+
+input[type=submit]:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
+
+input[type=submit]:active {
+  transform: scale(0.99);
+}
